_sass/components/_cards.scss
.card {
    box-sizing: border-box;
    background: white;
    width: 100%;
    max-width: 450px;
    padding: 0 0 4px 0;
    margin-top: 16px;
    margin-bottom: 16px;
    transition: all 0.3s;
}
.card-img {
    float: none !important;
    padding: 0 !important;
    width: 100%;
}
.card-heading {
    margin: 0;
    padding: 20px 24px 0 24px;
    font-size: 20px;
    line-height: 24px;
}
.card-body {
    padding: 20px 24px 0 24px;
}
.card-footer {
    padding: 0 20px;
}
.card-cta {
    @include font-roboto-condensed-bold;
    @extend [class*="icon-"];
    color: $color-1;
    &::after {
        @extend .icon-chevron-right;
        filter: $red;
    }
}
/* link type */
a.card {
    display: block;
    color: $color-2;
    text-decoration: none;
    border: solid 1px $color-3b;
    &:hover{
        color: $color-2;
        text-decoration: none;
        cursor: pointer;
        box-shadow: 0 5px 20px 0 rgba(0,0,0,0.2);
        .card-heading {
            color: $color-1;
            text-decoration: underline;
        }
        .card-cta {
            text-decoration: underline;
        }
    }
}

.card-course {
    @extend .card;
    .card-header {
        position: relative;
    }
    p, li {
        font-size: 16px;
        line-height: 24px;
    }
}

.card-save {
    width: 40px;
    height: 40px;
    position: absolute;
    bottom: 40px;
    right: 0;
    background-color: white;
    label {
        text-indent: 100%;
        white-space: nowrap;
        overflow: hidden;
        width: 40px;
        height: 40px;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: white;
        &::before {
            content: "";
            width: 40px;
            height: 40px;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            background-image: url("icons/feather/heart.svg");
            background-repeat: no-repeat;
            background-position: center;
        }
    }
    input[type="checkbox"]:checked + label::before {
        background-image: url("icons/feather-fill/heart.svg");
        filter: $red;
    }
}

.card-tag {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
    color: white;
    background: $color-1;
    padding: 8px 8px;
    @include font-roboto-condensed-bold;
    font-size: 16px;
    line-height: 1;
}

.card-tag-new {
    @extend .card-tag;
    background: $color-alt-3;
}

/* layouts */
.card-set {
    @include columns-grid;
}

